--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -63,13 +63,13 @@
         <h1>Javascript Slider Effect01</h1>
         <p>슬라이드 이펙트 - 트랜지션 효과</p>
         <ul>
-            <li class="active"><a href="slideEffect01.html">1</a></li>
-            <li><a href="slideEffect02.html">2</a></li>
-            <li><a href="slideEffect03.html">3</a></li>
-            <li><a href="slideEffect04.html">4</a></li>
-            <li><a href="slideEffect05.html">5</a></li>
-            <li><a href="slideEffect06.html">6</a></li>
-            <li><a href="slideEffect07.html">7</a></li>
+            <li class="active"><a href="sliderEffect01.html">1</a></li>
+            <li><a href="sliderEffect02.html">2</a></li>
+            <li><a href="sliderEffect03.html">3</a></li>
+            <li><a href="sliderEffect04.html">4</a></li>
+            <li><a href="sliderEffect05.html">5</a></li>
+            <li><a href="sliderEffect06.html">6</a></li>
+            <li><a href="sliderEffect07.html">7</a></li>
         </ul>
     </header>
 
