--- a/javascript/effect/sliderEffect02.html
+++ b/javascript/effect/sliderEffect02.html
@@ -43,11 +43,11 @@
         color: #fff;
         padding: 5px 10px;
     }
-    .slider:nth-child(1)::before {content: "이미지6";}
-    .slider:nth-child(2)::before {content: "이미지7";}
-    .slider:nth-child(3)::before {content: "이미지8";}
-    .slider:nth-child(4)::before {content: "이미지9";}
-    .slider:nth-child(5)::before {content: "이미지10";}
+    .slider:nth-child(1)::before {content: "이미지1";}
+    .slider:nth-child(2)::before {content: "이미지2";}
+    .slider:nth-child(3)::before {content: "이미지3";}
+    .slider:nth-child(4)::before {content: "이미지4";}
+    .slider:nth-child(5)::before {content: "이미지5";}
     .slider:nth-child(1) {z-index: 5;}
     .slider:nth-child(2) {z-index: 4;}
     .slider:nth-child(3) {z-index: 3;}
@@ -70,27 +70,27 @@
         <h1>Javascript Slider Effect02</h1>
         <p>슬라이드 이펙트 - 좌로 움직이기</p>
         <ul>
-            <li><a href="slideEffect01.html">1</a></li>
-            <li class="active"><a href="slideEffect02.html">2</a></li>
-            <li><a href="slideEffect03.html">3</a></li>
-            <li><a href="slideEffect04.html">4</a></li>
-            <li><a href="slideEffect05.html">5</a></li>
-            <li><a href="slideEffect06.html">6</a></li>
-            <li><a href="slideEffect07.html">7</a></li>
+            <li><a href="sliderEffect01.html">1</a></li>
+            <li class="active"><a href="sliderEffect02.html">2</a></li>
+            <li><a href="sliderEffect03.html">3</a></li>
+            <li><a href="sliderEffect04.html">4</a></li>
+            <li><a href="sliderEffect05.html">5</a></li>
+            <li><a href="sliderEffect06.html">6</a></li>
+            <li><a href="sliderEffect07.html">7</a></li>
         </ul>
     </header>
 
     <!-- main -->
     <main id="main">
-        <section id="sliderType01">
+        <section id="sliderType02">
             <div class="slider__wrap">
                 <div class="slider__img">
                     <div class="slider__inner">
-                        <div class="slider"><img src="../assets/img/slide06.jpg" alt="이미지6"></div>
-                        <div class="slider"><img src="../assets/img/slide07.jpg" alt="이미지7"></div>
-                        <div class="slider"><img src="../assets/img/slide08.jpg" alt="이미지8"></div>
-                        <div class="slider"><img src="../assets/img/slide09.jpg" alt="이미지9"></div>
-                        <div class="slider"><img src="../assets/img/slide10.jpg" alt="이미지10"></div>
+                        <div class="slider"><img src="../assets/img/slide06.jpg" alt="이미지1"></div>
+                        <div class="slider"><img src="../assets/img/slide07.jpg" alt="이미지2"></div>
+                        <div class="slider"><img src="../assets/img/slide08.jpg" alt="이미지3"></div>
+                        <div class="slider"><img src="../assets/img/slide09.jpg" alt="이미지4"></div>
+                        <div class="slider"><img src="../assets/img/slide10.jpg" alt="이미지5"></div>
                     </div>
                 </div>
             </div>
