--- a/javascript/effect/sliderEffect03.html
+++ b/javascript/effect/sliderEffect03.html
@@ -27,7 +27,7 @@
     .slider__inner {    /* 이미지를 감싸고 있는 부모 : 움직이는 부분 */
         display: flex;
         flex-wrap: wrap;
-        width: 4000px;
+        width: 4800px;      /* 총 이미지 6개 */
         height: 450px;
     }
     .slider {   /* 개별적인 이미지 */
@@ -48,11 +48,7 @@
     .slider:nth-child(3)::before {content: "이미지3";}
     .slider:nth-child(4)::before {content: "이미지4";}
     .slider:nth-child(5)::before {content: "이미지5";}
-    .slider:nth-child(1) {z-index: 5;}
-    .slider:nth-child(2) {z-index: 4;}
-    .slider:nth-child(3) {z-index: 3;}
-    .slider:nth-child(4) {z-index: 2}
-    .slider:nth-child(5) {z-index: 1;}
+    .slider:nth-child(6)::before {content: "이미지1";}
 
     @media(max-width: 800px) {
         .slider__img {
@@ -67,22 +63,22 @@
 
     <!-- header -->
     <header id="header">
-        <h1>Javascript Slider Effect02</h1>
+        <h1>Javascript Slider Effect03</h1>
         <p>슬라이드 이펙트 - 좌로 움직이기</p>
         <ul>
-            <li><a href="slideEffect01.html">1</a></li>
-            <li><a href="slideEffect02.html">2</a></li>
-            <li class="active"><a href="slideEffect03.html">3</a></li>
-            <li><a href="slideEffect04.html">4</a></li>
-            <li><a href="slideEffect05.html">5</a></li>
-            <li><a href="slideEffect06.html">6</a></li>
-            <li><a href="slideEffect07.html">7</a></li>
+            <li><a href="sliderEffect01.html">1</a></li>
+            <li><a href="sliderEffect02.html">2</a></li>
+            <li class="active"><a href="sliderEffect03.html">3</a></li>
+            <li><a href="sliderEffect04.html">4</a></li>
+            <li><a href="sliderEffect05.html">5</a></li>
+            <li><a href="sliderEffect06.html">6</a></li>
+            <li><a href="sliderEffect07.html">7</a></li>
         </ul>
     </header>
 
     <!-- main -->
     <main id="main">
-        <section id="sliderType01">
+        <section id="sliderType03">
             <div class="slider__wrap">
                 <div class="slider__img">
                     <div class="slider__inner">
@@ -192,7 +188,41 @@
     <script>
         hljs.highlightAll();
     </script>
-    
+    <script>
+        const sliderWrap = document.querySelector(".slider__wrap");
+        const sliderImg = document.querySelector(".slider__img");          // 보여지는 영역
+        const sliderInner = document.querySelector(".slider__inner");      // 움직이는 영역
+        const slider = document.querySelectorAll(".slider");               // 각각 이미지
+
+        let currentIndex = 0;                                               // 현재 보이는 이미지
+        let sliderCount = slider.length;                                    // 이미지 갯수
+        let sliderWidth = sliderImg.offsetWidth;                            // 이미지 가로 값
+        let sliderClone = sliderInner.firstElementChild.cloneNode(true);    // 첫번째 이미지 복사
+        sliderInner.appendChild(sliderClone);                               // 슬라이드 이미지를 마지막에 넣어줌
+
+        function sliderEffect() {
+            currentIndex++;
+            sliderInner.style.transition = "all 0.6s";
+            sliderInner.style.transform = "translateX(-"+ sliderWidth * currentIndex +"px)";
+
+            // sliderInner.style.transform = "translateX(-800px)";
+            // sliderInner.style.transform = "translateX(-1600px)";
+            // sliderInner.style.transform = "translateX(-2400px)";
+            // sliderInner.style.transform = "translateX(-3200px)";
+            // sliderInner.style.transform = "translateX(-4000px)";
+            // sliderInner.style.transform = "translateX(-4800px)";
+
+            // 마지막 사진에 위치했을 때
+            if(currentIndex == sliderCount) {
+                setTimeout(() => {
+                    sliderInner.style.transition = "0s";
+                    sliderInner.style.transform = "translateX(0px)";
+                }, 700);
+                currentIndex = 0;
+            }
+        }
+        setInterval(sliderEffect, 2000);
+</script>
     
 </body>
 </html>
