--- a/javascript/effect/searchEffect02.html
+++ b/javascript/effect/searchEffect02.html
@@ -60,12 +60,12 @@
                         <li data-name="appearance"><strong>appearance</strong> : 운영 체제의 테마를 기반으로 하는 UI 컨트롤의 기본 모양을 제어</li>
                         <li data-name="aspect-ratio"><strong>aspect-ratio</strong> : 자동 크기 및 기타 레이아웃 기능 계산에 사용되는 상자의 기본 종횡비를 설정</li>
                         
-                        <li data-name="backdrop-filter" data-type="효과"><strong>backdrop-filter</strong> : 배경에 그래픽 효과를 설정</li>
-                        <li data-name="backface-visibility" data-type="기타"><strong>backface-visibility</strong> :  요소의 뒷면을 설정합니다. 요소가 3D인 경우에서 설정 할 수 있다.</li>
-                        <li data-name="background" data-type="백그라운드"><strong>background</strong> : 백그라운드 속성을 일괄적으로 설정</li>
-                        <li data-name="background-attachment" data-type="백그라운드"><strong>background-attachment</strong> : 배경 이미지의 고정 여부를 설정</li>
-                        <li data-name="background-blend-mode" data-type="백그라운드"><strong>background-blend-mode</strong> : 배경을 혼합했을 때 그래픽 효과를 설정</li>
-                        <li data-name="background-clip" data-type="백그라운드"><strong>background-clip</strong> : 백그라운드 이미지의 위치 기준점을 설정</li>
+                        <li data-name="backdrop-filter"><strong>backdrop-filter</strong> : 배경에 그래픽 효과를 설정</li>
+                        <li data-name="backface-visibility"><strong>backface-visibility</strong> :  요소의 뒷면을 설정합니다. 요소가 3D인 경우에서 설정 할 수 있다.</li>
+                        <li data-name="background"><strong>background</strong> : 백그라운드 속성을 일괄적으로 설정</li>
+                        <li data-name="background-attachment"><strong>background-attachment</strong> : 배경 이미지의 고정 여부를 설정</li>
+                        <li data-name="background-blend-mode"><strong>background-blend-mode</strong> : 배경을 혼합했을 때 그래픽 효과를 설정</li>
+                        <li data-name="background-clip"></li><strong>background-clip</strong> : 백그라운드 이미지의 위치 기준점을 설정</li>
                         <li data-name="background-color"><strong>background-color</strong> : 백그라운드 색을 설정</li>
                         <li data-name="background-image"><strong>background-image</strong> : 백그라운드 이미지 속성을 설정</li>
                         <li data-name="background-origin"><strong>background-origin</strong> : 	백그라운드 이미지의 위치 기준점을 설정하기 위한 속성</li>
