--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -18,7 +18,7 @@
             position: fixed;
             right: 20px;
             top: 20px;
-            z-index: 10000;
+            z-index: 2000;
             background-color: rgba(0, 0, 0, 0.4);
             padding: 20px 30px;
             border-radius: 50px;
@@ -54,6 +54,7 @@
             text-align: left;
             margin-right: 0;
             position: relative;
+            padding-top: 13vw;
         }
         .content__item:nth-child(even) {
             margin-left: 0;
@@ -65,8 +66,9 @@
             font-weight: 100;
             position: absolute;
             left: -5vw;
-            top: -20vw;
+            top: -10vw;
             opacity: 0.2;
+            z-index: -2;
         }
         .content__item:nth-child(even) .content__item__num {
             left: auto;
@@ -82,6 +84,7 @@
             background-color: #fff;
             position: relative;
             overflow: hidden;
+            z-index: -1;
         }
         .content__item__img {
             position: absolute;
@@ -123,9 +126,67 @@
         .content__item:nth-child(9) .content__item__img {
             background-image: url(../assets/img/slide09.jpg);
         }
+        .content__item__desc {
+            font-size: 4vw;
+            line-height: 1.4;
+            margin-top: -5vw;
+            margin-left: -4vw;
+            word-break: keep-all;
+        }
+        .content__item:nth-child(even) .content__item__desc {
+            margin-left: auto;
+            margin-right: -4vw;
+        }
+
+        #parallax__info {
+            position: fixed;
+            left: 20px;
+            bottom: 20px;
+            z-index: 2000;
+            background: rgba(0, 0, 0, 0.6);
+            color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .parallax__info li, .scrollTop {
+            line-height: 1.4;
+        }
+
+        @media (max-width: 800px) {
+            #parallax__cont {
+                margin-top: 70vw;
+            }
+            #parallax__nav {
+                padding: 10px;
+                right: auto;
+                left: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+                border-radius: 5px;
+                background-color: rgba(0, 0, 0, 0.8);
+            }
+            #parallax__nav li {
+                display: block;
+                margin: 5px;
+            }
+            #parallax__nav li a {
+                font-size: 14px;
+                padding: 5px;
+                border-radius: 5px;
+                height: auto;
+                line-height: 1.4;
+            }
+            #parallax__nav li.active a {
+                border-radius: 10px;
+            }
+            #parallax__info {
+                left: 10px;
+                bottom: 10px;
+            }
+        }
     </style>
 </head>
-<body class="img04">
+<body>
     <header id="header">
         <h1>Javascript Mouse Effect01</h1>
         <p>패럴렉스 이펙트 - 메뉴 이동</p>
@@ -144,20 +205,20 @@
     <nav id="parallax__nav">
         <ul>
             <li class="active"><a href="#section1">메뉴1</a></li>
-            <li><a href="#section1">메뉴2</a></li>
-            <li><a href="#section1">메뉴3</a></li>
-            <li><a href="#section1">메뉴4</a></li>
-            <li><a href="#section1">메뉴5</a></li>
-            <li><a href="#section1">메뉴6</a></li>
-            <li><a href="#section1">메뉴7</a></li>
-            <li><a href="#section1">메뉴8</a></li>
-            <li><a href="#section1">메뉴9</a></li>
+            <li><a href="#section2">메뉴2</a></li>
+            <li><a href="#section3">메뉴3</a></li>
+            <li><a href="#section4">메뉴4</a></li>
+            <li><a href="#section5">메뉴5</a></li>
+            <li><a href="#section6">메뉴6</a></li>
+            <li><a href="#section7">메뉴7</a></li>
+            <li><a href="#section8">메뉴8</a></li>
+            <li><a href="#section9">메뉴9</a></li>
         </ul>
     </nav>
+    <!-- //nav -->
 
     <main id="parallax__cont">
         <div id="contents">
-
             <!-- section1 -->
             <section id="section1" class="content__item">
                 <span class="content__item__num">01</span>
@@ -169,7 +230,7 @@
             </section>
 
             <!-- section2 -->
-            <section id="section" class="content__item">
+            <section id="section2" class="content__item">
                 <span class="content__item__num">02</span>
                 <h2 class="content__item__title">section2</h2>
                 <figure class="content__item__imgWrap">
@@ -215,7 +276,7 @@
                 <figure class="content__item__imgWrap">
                     <div class="content__item__img"></div>
                 </figure>
-                <p class="content__item__desc">돈이 세상에 다는 아니지만 돈이 중요한건 사실이다.</p>
+                <p class="content__item__desc">돈이 세상에 다는 아니지만 세상은 돈으로 굴러간다.</p>
             </section>
 
             <!-- section7 -->
@@ -247,12 +308,29 @@
                 </figure>
                 <p class="content__item__desc">객관적으로 너 자신을 봐라</p>
             </section>
-
         </div>
         <section id="parallaxType">
         </section>
     </main>
     <!-- //main -->
+
+    <aside id="parallax__info">
+        <div class="scroll">scrollTop : <span>0</span>px</div>
+        <div class="info">
+            <ul>
+                <li>#section1 offset() : <span class="offset1">0</span>px</li>
+                <li>#section2 offset() : <span class="offset2">0</span>px</li>
+                <li>#section3 offset() : <span class="offset3">0</span>px</li>
+                <li>#section4 offset() : <span class="offset4">0</span>px</li>
+                <li>#section5 offset() : <span class="offset5">0</span>px</li>
+                <li>#section6 offset() : <span class="offset6">0</span>px</li>
+                <li>#section7 offset() : <span class="offset7">0</span>px</li>
+                <li>#section8 offset() : <span class="offset8">0</span>px</li>
+                <li>#section9 offset() : <span class="offset9">0</span>px</li>
+            </ul>
+        </div>
+    </aside>
+    <!-- aside -->
 
     <footer id="footer">
         <div class="modal__wrap">
@@ -343,6 +421,7 @@
         </div>
     </footer>
     <!-- //footer -->
+
     <script src="../assets/css/js/highlight.min.js"></script>
     <script src="../assets/css/js/common.js"></script>
     <script>
@@ -350,97 +429,116 @@
     </script>
 
     <script>
-        window.addEventListener("mousemove", (event) => {
-            document.querySelector(".clientX").innerText = event.clientX;
-            document.querySelector(".clientY").innerText = event.clientY;
-            document.querySelector(".offsetX").innerText = event.offsetX;
-            document.querySelector(".offsetY").innerText = event.offsetY;
-            document.querySelector(".pageX").innerText = event.pageX;
-            document.querySelector(".pageY").innerText = event.pageY;
-            document.querySelector(".screenX").innerText = event.screenX;
-            document.querySelector(".screenY").innerText = event.screenY;
-        });
+        const scroll = document.querySelector("#parallax__info .scroll span");
 
-        const cursor = document.querySelector(".mouse__cursor");
+        window.addEventListener("scroll", () => {
+            // let scrollTop = window.pageYOffset;                      // 첫 번째 방법
+            // let scrollTop = window.scrollY;                          // 두 번째 방법
+            // let scrollTop = document.documentElement.scrollTop;      // 세 번째 방법
+            let scrollTop = window.pageYOffset || indow.scrollY || document.documentElement.scrollTop;
 
-        window.addEventListener("mousemove", (e) => {
-            cursor.style.left = e.clientX - 25 + "px";
-            cursor.style.top = e.clientY - 25 + "px";
-        });
-
-        // document.querySelector(".style1").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style1");
-        // });
-        // document.querySelector(".style1").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style1");
-        // });
-
-        // document.querySelector(".style2").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style2");
-        // });
-        // document.querySelector(".style2").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style2");
-        // });
-
-        // document.querySelector(".style3").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style3");
-        // });
-        // document.querySelector(".style3").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style3");
-        // });
-
-        // document.querySelector(".style4").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style4");
-        // });
-        // document.querySelector(".style4").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style4");
-        // });
-
-        // document.querySelector(".style5").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style5");
-        // });mouseouts
-        // document.querySelector(".style5").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style5");
-        // });
-
-        // document.querySelector(".style6").addEventListener("mouseover", () => {
-        //     cursor.classList.add("style6");
-        // });
-        // document.querySelector(".style6").addEventListener("mouseout", () => {
-        //     cursor.classList.remove("style6");
-        // });
-
-        // // for문
-        // for(let i=1; i<=6; i++) {
-        //     document.querySelector(".style" + i).addEventListener("mouseover", () => {
-        //         cursor.classList.add("style" + i);
-        //     });
-        //     document.querySelector(".style" + i).addEventListener("mouseout", () => {
-        //         cursor.classList.remove("style" + i);
-        //     });
-        // }
-
-        // // forEach문
-        // document.querySelectorAll(".mouse__wrap span").forEach((span, num) => {
-        //     span.addEventListener("mouseover", () => {
-        //         cursor.classList.add("style" + (num + 1));
-        //     });
-        //     span.addEventListener("mouseout", () => {
-        //         cursor.classList.add("style" + (num + 1));
-        //     });
-        // });
-
-        // getAttribute
-        document.querySelectorAll(".mouse__wrap span").forEach(span => {
-            let attr = span.getAttribute("class");
-
-            span.addEventListener("mouseover", () => {
-                cursor.classList.add(attr);
+            // forEach
+            document.querySelectorAll(".content__item").forEach((element, index) => {
+                if(scrollTop >= element.offsetTop -2) {
+                    document.querySelectorAll("#parallax__nav li").forEach(li => {
+                        li.classList.remove("active");
+                    });
+                    document.querySelector("#parallax__nav li:nth-child("+(index+1)+")").classList.add("active");
+                }
             });
-            span.addEventListener("mouseout", () => {
-                cursor.classList.remove(attr);
-            });
+
+            // info
+            document.querySelector(".scroll span").innerText = Math.round(scrollTop);
+
+            for(let i=1; i<=9; i++) {
+                document.querySelector(".offset"+i).innerText = document.getElementById("section"+i).offsetTop;
+            }
         });
+
+        // 스크롤 이동
+        document.querySelectorAll("#parallax__nav li a").forEach(li => {
+            li.addEventListener("click", (e) => {
+                e.preventDefault();
+                document.querySelector(li.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            })
+        })
+
+            // if(scrollTop >= document.getElementById("section1").offsetTop) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(1)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section2").offsetTop -2) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(2)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section3").offsetTop -2) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(3)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section4").offsetTop) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(4)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section5").offsetTop) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(5)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section6").offsetTop) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(6)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section7").offsetTop -2) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(7)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section8").offsetTop -2) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li:nth-child(8)").classList.add("active");
+            // }
+            // if(scrollTop >= document.getElementById("section9").offsetTop) {
+            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //         li.classList.remove("active");
+            //     });
+            //     document.querySelector("#parallax__nav li(9)").classList.add("active");
+            // }
+
+            // for
+            // for(let i=0; i<=9; i++) {
+            //     if(scrollTop >= document.getElementById("section"+i).offsetTop) {
+            //         document.querySelectorAll("#parallax__nav li").forEach(li => {
+            //             li.classList.remove("active");
+            //         });
+            //         document.querySelector("#parallax__nav li:nth-child("+i+")").classList.add("active");
+            //     }
+            // }
+
+            // document.querySelector(".offset1").innerText = document.getElementById("section1").offsetTop;
+            // document.querySelector(".offset2").innerText = document.getElementById("section2").offsetTop;
+            // document.querySelector(".offset3").innerText = document.getElementById("section3").offsetTop;
+            // document.querySelector(".offset4").innerText = document.getElementById("section4").offsetTop;
+            // document.querySelector(".offset5").innerText = document.getElementById("section5").offsetTop;
+            // document.querySelector(".offset6").innerText = document.getElementById("section6").offsetTop;
+            // document.querySelector(".offset7").innerText = document.getElementById("section7").offsetTop;
+            // document.querySelector(".offset8").innerText = document.getElementById("section8").offsetTop;
+            // document.querySelector(".offset9").innerText = document.getElementById("section9").offsetTop;
     </script>
 </body>
 </html>
