--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -41,13 +41,26 @@
         </nav>
     </header>
     <!-- //header -->
+
     <main id="main">
+        <div class="main_menu">
+            <ul>
+                <li><a href="#">01. 수학 메서드 : Math.round() : 반올림 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.floor() : 버림 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.ceil() : 올림 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.max() : 가장 큰 값 반환 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.min() : 가장 큰 값 반환 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.abs() : 절대값 반환 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.trulc() : 값의 정수 부분만 반환 : 반환(숫자)</a></li>
+                <li><a href="#">01. 수학 메서드 : Math.random() : 랜덤값 반환(0~1 사이에 난수 값을 반환) : 반환(숫자)</a></li>
     </main>
     <!-- //main -->
+
     <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
+
     <script src="assets/css/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
