--- a/javascript/javascript09.html
+++ b/javascript/javascript09.html
@@ -48,10 +48,14 @@
                 <li><a href="#">01. 브라우저 속성 : window.innerheight : 브라우저의 높이 값(스크롤바 미포함)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.outerWidth : 브라우저의 가로 값(스크롤바 포함)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.outerHeight : 브라우저의 가로 값(스크롤바 포함)</a></li>
+                
                 <li><a href="#">01. 브라우저 속성 : window.pageXOffset : 가로 스크롤 값(브라우저 기준)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.pageYOffset : 세로 스크롤 값(브라우저 기준)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.scrollX : 가로 스크롤 값(브라우저 기준)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.scrollY : 세로 스크롤 값(브라우저 기준)</a></li>
+                <li><a href="#">01. 도큐먼트 속성 : document.documentElement.scrollLeft : 가로 스크롤 값(브라우저 기준)</a></li>
+                <li><a href="#">01. 도큐먼트 속성 : document.documentElement.scrollTop : 세로 스크롤 값(브라우저 기준)</a></li>
+
                 <li><a href="#">01. 브라우저 메서드 : window.scroll() : 스크롤 값 설정</a></li>
                 <li><a href="#">01. 브라우저 메서드 : window.scrollTo() : 스크롤 값 설정(절대 기준)</a></li>
                 <li><a href="#">01. 브라우저 메서드 : window.scrollBy() : 스크롤 값 설정(상대 기준)</a></li>
