--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -296,7 +296,7 @@
                 <figure class="content__item__imgWrap">
                     <div class="content__item__img"></div>
                 </figure>
-                <p class="content__item__desc">세상을 정의는 있지만 모든게 정의는 아니다.</p>
+                <p class="content__item__desc">힘 없는 정의는 무능이다.</p>
             </section>
 
             <!-- section9 -->
