--- a/study/t_study/Ex/study/parallaxEffect01.html
+++ b/study/t_study/Ex/study/parallaxEffect01.html
@@ -19,7 +19,8 @@
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
+                각 태그에 클래스 이름을 설정하여 각 구역을 잡아줍니다.
             </p>
             <div class="t_code">
             <details>
@@ -174,7 +175,8 @@
 
             <h3 class="t_tit2">CSS</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
+                각 이미지를 지정하기 위해 nth-child를 사용하여 각각의 이미지를 삽입해줍니다.
             </p>
             <details>
                 <summary>코드 보기</summary>
@@ -356,7 +358,15 @@
 
             <h3 class="t_tit2">script</h3>
             <p class="t_desc2">
-                querySelector를 이용하여 배열을 불러와준 뒤에, forEach문을 사용해줍니다.
+                노가다성이 느껴지는 코드 작성을 하지 않기 위해서 forEach문을 사용해주며,<br>
+                forEach 사용 방법은 .content__item의 값들을 불러오기 위해 querySelectorAll사용해주고, element, index을 지정해줍니다.<br>
+                그리고 출력 값을 정해준 뒤, remove와 add를 사용해서 active 효과가 겹치지 않고 각각의 작동하도록 만듭니다.<br>
+                scrollTop의 값을 알기 위해 scrollTop, scrollY, document.documentElement.scrollTop메서들 사용해줍니다.<br>
+            </p>
+            <p class="t_box">
+                scrollTop은 개별적으로 사용하는 방법이 있지만, || 를 이용해 여러가지를 한번에 사용할 수도 있다.<br>
+                scrollIntoView() : 스크롤 이동 및 설정하는 메서드<br>
+                behavior: "smooth"는 이동시에 부드럽게 이동하도록 설정할 수 있다.
             </p>
             <details>
                 <summary>코드 보기</summary>
@@ -364,8 +374,8 @@
 <pre><code class="language-js">    const scroll = document.querySelector("#parallax__info .scroll span");
 
     window.addEventListener("scroll", () => {
-        // let scrollTop = window.pageYOffset;                      // 첫 번째 방법
-        // let scrollTop = window.scrollY;                          // 두 번째 방법
+        // let scrollTop = window.pageYOffset;                                   // 첫 번째 방법
+        // let scrollTop = window.scrollY;                                            // 두 번째 방법
         // let scrollTop = document.documentElement.scrollTop;      // 세 번째 방법
         let scrollTop = window.pageYOffset || indow.scrollY || document.documentElement.scrollTop;
 
