--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../assets/png/favicon2.ico">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon2.png">
     <link rel="icon" href="../assets/ico/favicon2.png">
-    <link href="https://webfontworld.github.io/score/SCoreDream.css" rel="stylesheet">4
+    <link href="https://webfontworld.github.io/score/SCoreDream.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
