--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
             <li><a href="#filter-color-any" data-filter-value="" class="selected">ALL</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SCRIPT</a></li>
-            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">LAYOUT</a></li>
-            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">REFERENCE</a></li>
-            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SITE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".layout">LAYOUT</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".reference">REFERENCE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".animation">Animation</a></li>
           </ul>
         </div>
       </div>
@@ -406,6 +407,48 @@
                   <h5>GAME</h5>
                   <p>게임 효과</p>
                   <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box GAME -->
+
+          <!-- box SVG -->
+          <section class="color-shape animation">
+            <a href="animation/svg.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SVG</span>
+                  <span class="overlay-text-thumb-donut">SVG</span>
+                  <span class="overlay-text-thumb1-donut">SVG</span>
+                  <span class="overlay-text-thumb2-donut">SVG</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SVG</h5>
+                  <p>SVG</p>
+                  <span>SVG</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box SVG -->
+
+          <!-- box CSS -->
+          <section class="color-shape animation">
+            <a href="animation/css.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">CSS</span>
+                  <span class="overlay-text-thumb-donut">CSS</span>
+                  <span class="overlay-text-thumb1-donut">CSS</span>
+                  <span class="overlay-text-thumb2-donut">CSS</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>CSS</h5>
+                  <p>CSS</p>
+                  <span>CSS</span>
                 </div>
               </div>
             </a>
